fix: code block contrast

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -27,7 +27,7 @@ body,
 
 /* font sizing */
 body {
-    color: $text;
+    // color: $text;
     font-size: 100%;
     font-family: Helvetica, sans-serif;
     line-height: 1.6;
@@ -77,13 +77,12 @@ p {
 }
 
 blockquote {
-    border-left: 5px solid $primary;
+    margin: 0.4em 0px 0.4em 5px;
     padding: 15px 0px 15px 15px;
     background-color: #f4f4f4;
     border-radius: 4px;
     width: 100%;
     max-width: 550px;
-    margin: 0.4em 0px;
 }
 
 blockquote p {
